--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                 <div class="col-lg-6 col-12">
                     <img src="./assets/about/section1/image.png" class="img-fluid" alt="">
                 </div>
-            </div>
+            </div>  
         </div>
     </section>
     <!--Section 02-->
@@ -175,28 +175,32 @@
                         <div class="col-md-6 col-12">
                             <img src="./assets/about/section3/01.png" class="img-fluid" alt="">
                         </div>
-                        <div class="col-md-6 col-12">
-                            <img src="./assets/about/section3/01.png" class="img-fluid" alt="">
+                        <div class="col-md-6 col-12 py-5 px-3">
+                            <h3>Productivity</h3>
+                            <p>Our on-demand services help students, workers, and businesses <br>save time on transport and maximize their time being <br> productive.
+                          Responsive Healthcare In</p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="row bg-white">
                         <div class="col-md-6 col-12">
-                            <img src="./assets/about/section3/01.png" class="img-fluid" alt="">
+                            <img src="./assets/about/section3/02.png" class="img-fluid" alt="">
                         </div>
-                        <div class="col-md-6 col-12">
-                            <img src="./assets/about/section3/01.png" class="img-fluid" alt="">
+                        <div class="col-md-6 col-12 py-5 px-3">
+                            <h3>Responsive Healthcare</h3>
+                            <p>In a country with over 190 million in population, healthcare is not geographically accessible for many. Which is why we have partnered with clinics to provide fast, on-demand first aid staff to individuals in need. In addition, we have partnered with pharmacies to help deliver over-the-counter medicine to those with no means of doing so.</p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="row bg-white">
                         <div class="col-md-6 col-12">
-                            <img src="./assets/about/section3/01.png" class="img-fluid" alt="">
+                            <img src="./assets/about/section3/03.png" class="img-fluid" alt="">
                         </div>
-                        <div class="col-md-6 col-12">
-                            <img src="./assets/about/section3/01.png" class="img-fluid" alt="">
+                        <div class="col-md-6 col-12 py-5 px-3">
+                            <h3>Luring into Technology</h3>
+                            <p>A Bykea can be booked via a smartphone and a feature phone. Although booking through a smartphone is more economical, we are capitalizing on the millions who have yet to migrate to smartphones by offering other methods of booking. Local call centres help involve our masses in this technological revolution in the transport industry.</p>
                         </div>
                     </div>
                 </div>
@@ -254,8 +258,78 @@
                 </div>
             </div>
         </div>
+        <hr>
     </section>
-
+    <div class="container mt-5 bg">
+        <h2 class="fw-bold mb-2">Looking For Oppurtunities?</h2>
+        <h3>Discover Bykea Careers</h3>
+        <button class="Learn border-0 mt-2 btn">View Oppurtunities</button>
+    </div>
+    <!--Footer-->
+    <footer class="container-fluid text-white pb-5">
+        <div class="container">
+            <div class="d-flex justify-content-evenly row">
+                <div class="col-12 col-lg-3 col-md-6 mt-3">
+                    <img src="./assets/footer/01.png" alt="">
+                    <p class="mt-4">Moving Pakistan Forward</p>
+                    <a href="">
+                        <i class="fa-solid fa-phone"></i> 021 38654444
+                        <br>
+                        <i class="fa-solid fa-envelope"></i> info@bykea.com
+                    </a>
+                    <br>
+                    <br>
+                    <a href=""><img src="./assets/section-04/apple.png" alt=" " width="100" class="mt-2"></a>
+                    <a href=""><img src="./assets/section-04/app.png" alt=" " width="100" class="mt-2"></a>
+                    <a href=""><img src="./assets/section-04/play.png" alt=" " width="100" class="mt-2"></a>
+                </div>
+                <div class="col-6 col-lg-3 mt-3">
+                    <h5>About</h5>
+                    <a href="">Company</a> <br>
+                    <a href="">Team</a> <br>
+                    <a href="">Mission, Vision & Values</a> <br>
+                    <a href="">Social Impact</a> <br>
+                    <a href="">Press & Media</a> <br>
+                    <a href="">Careers</a> <br>
+                    <a href="">Franchise</a> <br>
+                    <a href="">Security</a> <br>
+                </div>
+                <div class="col-6 col-lg-3 mt-3">
+                    <h5>Products</h5>
+                    <a href="">Ride</a> <br>
+                    <a href="">Insurance</a> <br>
+                    <a href="">Shops</a> <br>
+                    <a href="">Delivery</a> <br>
+                    <a href="">Bykea For Business</a> <br>
+                </div>
+                <div class="col-12 col-lg-3 mt-3">
+                    <h5>Bykea Partner</h5>
+                    <a href="">About partner</a> <br>
+                    <a href="">Help Center</a> <br>
+                    <a href="">FAQs</a> <br>
+                    <a href="">Contact Us</a> <br>
+                </div>
+            </div>
+            <hr>
+            <div class="row justify-content-evenly d-flex">
+                <div class="col">
+                    All Rights Reserved Bykea Pakistan
+                </div>
+                <div class="col d-flex gap-3">
+                    <a href="">Privacy policy</a>
+                    <a href="">Accessibility</a>
+                    <a href="">Safety</a>
+                    <a href="">Terms</a>
+                </div>
+                <div class="col">
+                    <a href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter fa-lg"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram fa-lg"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- bootsrap cdn JS link. -->,
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
