--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     .navbar-toggler-icon {
         background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='green' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }
+     /* Normal (inactive) dots */
+    .carousel-indicators [data-bs-target] {
+        background-color: green;
+    }
+
+    /* Active dot */
+    .carousel-indicators .active {
+        background-color: darkgreen;
+    }
 </style>
 
 <body class="bg-body-tertiary py-0">
@@ -151,7 +160,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 col-12">
-                            <img src="./assets/section-02/img1.png" class="img-fluid" alt="">
+                            <img src="./assets/home/section-02/img1.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
@@ -175,7 +184,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 col-12">
-                            <img src="./assets/section-02/img2.png" class="img-fluid" alt="">
+                            <img src="./assets/home/section-02/img2.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
@@ -197,7 +206,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 col-12">
-                            <img src="./assets/section-02/img3.png" class="img-fluid" alt="">
+                            <img src="./assets/home/section-02/img3.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
@@ -239,7 +248,7 @@
     <section class="container">
         <div class="row align-items-center">
             <div class="col-md-6 col-12">
-                <img src="./assets/section-04/sec-4-1.png" class="img-fluid" alt="">
+                <img src="./assets/Home/section-04/sec-4-1.png" class="img-fluid" alt="">
             </div>
             <div class="col-md-6 col-12">
                 <h3 class="fs-6">WHY CHOOSE BYKEA?</h3>
@@ -252,22 +261,22 @@
 
                 <h4 class="sec-4-heading">Provide transparent pricing</h4>
                 <p>Our charges have no hidden-costs, we ensure to list down all charges per service used.</p>
-                <img src="./assets/section-04/apple.png" class="img-fluid mb-2  download" alt="">
-                <img src="./assets/section-04/app.png" class="img-fluid mb-2  download" alt="">
-                <img src="./assets/section-04/play.png" class="img-fluid mb-2  download" alt="">
+                <img src="./assets/Home/section-04/apple.png" class="img-fluid mb-2  download" alt="">
+                <img src="./assets/home/section-04/app.png" class="img-fluid mb-2  download" alt="">
+                <img src="./assets/Home/section-04/play.png" class="img-fluid mb-2  download" alt="">
             </div>
         </div>
     </section>
     <!--section 05-->
     <section class="container-fluid mt-5">
-        <img src="./assets/section-05/sec-5.png" class="img-fluid" alt="">
+        <img src="./assets/Home/section-05/sec-5.png" class="img-fluid" alt="">
     </section>
     <!--section 06-->
     <section class="container mt-5">
         <div class="row">
             <div class="col-md-6 col-12 px-5 mb-4 ">
                 <div class="box">
-                    <img src="./assets/section-06/01.png" class="img-fluid" alt="">
+                    <img src="./assets/Home/section-06/01.png" class="img-fluid" alt="">
                     <div class="py-2 px-4">
                         <h3>Safety</h3>
                         <p>All of our partners hold a valid driver’s license, are tracked and undergo a thorough
@@ -281,7 +290,7 @@
             </div>
             <div class="col-md-6 col-12 px-5 mb-4 ">
                 <div class="box">
-                    <img src="./assets/section-06/02.png" class="img-fluid" alt="">
+                    <img src="./assets/Home/section-06/02.png" class="img-fluid" alt="">
                     <div class="py-2 px-4">
                         <h3>Accessibility</h3>
                         <p>We believe in providing accessible means of using the Bykea services. With no need for
@@ -303,7 +312,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <img src="./assets/section-07/01.png" class="img-fluid" alt="">
+                <img src="./assets/Home/section-07/01.png" class="img-fluid" alt="">
             </div>
         </div>
         <div class="row">
@@ -322,7 +331,7 @@
         <div class="row">
             <div class="col-md-6 col-12 px-5 mb-4 ">
                 <div class="box">
-                    <img src="./assets/section-08/01.png" class="img-fluid" alt="">
+                    <img src="./assets/Home/section-08/01.png" class="img-fluid" alt="">
                     <div class="py-2 px-4">
                         <h3>Careers at Bykea</h3>
                         <p>We are always looking to grow our team. Discover the right role for you.</p>
@@ -334,7 +343,7 @@
             </div>
             <div class="col-md-6 col-12 px-5 mb-4 ">
                 <div class="box">
-                    <img src="./assets/section-08/02.png" class="img-fluid" alt="">
+                    <img src="./assets/Home/section-08/02.png" class="img-fluid" alt="">
                     <div class="py-2 px-4">
                         <h3>Partner with Bykea</h3>
                         <p>As a Bykea Partner, you are fully in control of your future.</p>
@@ -359,7 +368,7 @@
                     <div class="carousel-item active">
                         <div class="row align-items-center">
                             <div class="col-md-6 col-12">
-                                <img src="./assets/section-09/01.png" alt="" class="img-fluid">
+                                <img src="./assets/Home/section-09/01.png" alt="" class="img-fluid">
                             </div>
                             <div class="col-md-6 col-12">
                                 <p>“Today I booked my first ride on BYKEA from my office at Jail Road to the railway
@@ -378,7 +387,7 @@
                     <div class="carousel-item">
                         <div class="row align-items-center">
                             <div class="col-md-6 col-12">
-                                <img src="./assets/section-09/02.png" alt="" class="img-fluid">
+                                <img src="./assets/Home/section-09/02.png" alt="" class="img-fluid">
                             </div>
                             <div class="col-md-6 col-12">
                                 <p>"Very useful app. Highly satisfied with their services. Quick response to any query
@@ -393,7 +402,7 @@
                     <div class="carousel-item">
                         <div class="row align-items-center">
                             <div class="col-md-6 col-12">
-                                <img src="./assets/section-09/03.png" alt="" class="img-fluid">
+                                <img src="./assets/Home/section-09/03.png" alt="" class="img-fluid">
                             </div>
                             <div class="col-md-6 col-12">
                                 <p>"Excellent bike riding app with easy to understand navigations for tracking your
@@ -409,7 +418,7 @@
             </div>
         </div>
     </section>
-
+    <!--Footer-->
     <footer class="container-fluid text-white mt-5 py-5">
         <div class="container">
             <div class="d-flex justify-content-evenly row">
@@ -423,11 +432,11 @@
                     </a>
                     <br>
                     <br>
-                    <a href=""><img src="./assets/section-04/apple.png" alt=" " width="100" class="mt-2"></a>
-                    <a href=""><img src="./assets/section-04/app.png" alt=" " width="100" class="mt-2"></a>
-                    <a href=""><img src="./assets/section-04/play.png" alt=" " width="100" class="mt-2"></a>
+                    <a href=""><img src="./assets/Home/section-04/apple.png" alt=" " width="100" class="mt-2"></a>
+                    <a href=""><img src="./assets/Home/section-04/app.png" alt=" " width="100" class="mt-2"></a>
+                    <a href=""><img src="./assets/Home/section-04/play.png" alt=" " width="100" class="mt-2"></a>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 mt-3">
+                <div class="col-6 col-lg-3 mt-3">
                     <h5>About</h5>
                     <a href="">Company</a> <br>
                     <a href="">Team</a> <br>
@@ -438,7 +447,7 @@
                     <a href="">Franchise</a> <br>
                     <a href="">Security</a> <br>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 mt-3">
+                <div class="col-6 col-lg-3 mt-3">
                     <h5>Products</h5>
                     <a href="">Ride</a> <br>
                     <a href="">Insurance</a> <br>
@@ -446,7 +455,7 @@
                     <a href="">Delivery</a> <br>
                     <a href="">Bykea For Business</a> <br>
                 </div>
-                <div class="col-12 col-lg-3 col-md-6 mt-3">
+                <div class="col-12 col-lg-3 mt-3">
                     <h5>Bykea Partner</h5>
                     <a href="">About partner</a> <br>
                     <a href="">Help Center</a> <br>
